chore: open java.lang.reflect