@@ -1,2 +1,3 @@
 -Dfile.encoding=UTF-8
 --add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
